--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -13,7 +13,7 @@
     </tr>
     {% for vehicle in vehicles %}
       <tr>
-        <td><a class="mr-2" href="#" title="Edit Vehicle">{{ vehicle.vehicle_type }}</a></td>
+        <td><a class="mr-2" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Edit Vehicle">{{ vehicle.vehicle_type }}</a></td>
         <td>{{ vehicle.vehicle_brand }}</td>
         <td>{{ vehicle.vehicle_registration }}</td>
         <td><a class="mr-2" href="#" title="Edit Company">{{ vehicle.vehicle_company.companyname }}</a></td>
