--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -2,6 +2,20 @@
 {% block content %}
     <h1>Travel Warrant - work in progress</h1>
     <div class="form-group">
+        {{ form.user_id.label(class="form-control-label") }}
+
+        {% if form.user_id.errors %}
+            {{ form.user_id(class="form-control form-control-lg is-invalid") }}
+            <div class="invalid-feedback">
+                {% for error in form.user_id.errors %}
+                    <span>{{ error }}</span>
+                {% endfor %}
+            </div>
+        {% else %}
+            {{ form.user_id(class="form-control form-control-lg") }}
+        {% endif %}
+    </div>
+    <div class="form-group">
         {{ form.with_task.label(class="form-control-label") }}
 
         {% if form.with_task.errors %}
@@ -50,6 +64,7 @@
         {% endif %}
       </div>
     </div>
+
     <div class="form-group">
         {{ form.relation.label(class="form-control-label") }}
 
@@ -62,6 +77,38 @@
             </div>
         {% else %}
             {{ form.relation(class="form-control form-control-lg") }}
+        {% endif %}
+    </div>
+    <div class="form-group">
+        {{ form.date_start.label(class="form-control-label") }}
+
+        {% if form.date_start.errors %}
+            {{ form.date_start(class="form-control form-control-lg is-invalid") }}
+            {{ form.time_start(class="form-control form-control-lg") }}
+            <div class="invalid-feedback">
+                {% for error in form.date_start.errors %}
+                    <span>{{ error }}</span>
+                {% endfor %}
+            </div>
+        {% else %}
+            {{ form.date_start(class="form-control form-control-lg") }}
+            {{ form.time_start(class="form-control form-control-lg") }}
+        {% endif %}
+    </div>
+    <div class="form-group">
+        {{ form.date_end.label(class="form-control-label") }}
+
+        {% if form.date_end.errors %}
+            {{ form.date_end(class="form-control form-control-lg is-invalid") }}
+            {{ form.time_end(class="form-control form-control-lg is-invalid") }}
+            <div class="invalid-feedback">
+                {% for error in form.date_end.errors %}
+                    <span>{{ error }}</span>
+                {% endfor %}
+            </div>
+        {% else %}
+            {{ form.date_end(class="form-control form-control-lg") }}
+            {{ form.time_end(class="form-control form-control-lg") }}
         {% endif %}
     </div>
     <div class="form-group">
