--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -168,6 +168,148 @@
         {% endif %}
     </div>
     <div class="form-group">
+        {{ form.approve_usage_of.label(class="form-control-label") }}
+    </div>
+
+    <div id="accordion">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h5 class="mb-0">
+            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              - Službenog Vozila
+            </button>
+          </h5>
+        </div>
+        <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion">
+          <div class="card-body">
+            {{ form.approve_usage_of_lisa_vozila.label(class="form-control-label") }}
+
+            {% if form.approve_usage_of_lisa_vozila.errors %}
+                {{ form.approve_usage_of_lisa_vozila(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.approve_usage_of_lisa_vozila.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% else %}
+                {{ form.approve_usage_of_lisa_vozila(class="form-control form-control-lg") }}
+            {% endif %}
+          </div>
+        </div>
+      </div>
+
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                - Službenog Vozila (Sa Kolegom)
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse hide" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+              {{ form.approve_usage_of_sa_kolegom.label(class="form-control-label") }}
+
+              {% if form.approve_usage_of_sa_kolegom.errors %}
+                  {{ form.approve_usage_of_sa_kolegom(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.approve_usage_of_sa_kolegom.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.approve_usage_of_sa_kolegom(class="form-control form-control-lg") }}
+              {% endif %}
+            </div>
+          </div>
+        </div>
+
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header" id="headingTree">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTree" aria-expanded="true" aria-controls="collapseTree">
+                  - Ličnog Vozila
+                </button>
+              </h5>
+            </div>
+            <div id="collapseTree" class="collapse hide" aria-labelledby="headingTree" data-parent="#accordion">
+              <div class="card-body">
+                {{ form.approve_usage_of_licno_vozilo_tip.label(class="form-control-label") }}
+
+                {% if form.approve_usage_of_licno_vozilo_tip.errors %}
+                    {{ form.approve_usage_of_licno_vozilo_tip(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.approve_usage_of_licno_vozilo_tip.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.approve_usage_of_licno_vozilo_tip(class="form-control form-control-lg") }}
+                {% endif %}
+              </div>
+              <div class="card-body">
+                {{ form.approve_usage_of_licno_vozilo_marka.label(class="form-control-label") }}
+
+                {% if form.approve_usage_of_licno_vozilo_marka.errors %}
+                    {{ form.approve_usage_of_licno_vozilo_marka(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.approve_usage_of_licno_vozilo_marka.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.approve_usage_of_licno_vozilo_marka(class="form-control form-control-lg") }}
+                {% endif %}
+              </div>
+              <div class="card-body">
+                {{ form.approve_usage_of_licno_vozilo_registracija.label(class="form-control-label") }}
+
+                {% if form.approve_usage_of_licno_vozilo_registracija.errors %}
+                    {{ form.approve_usage_of_licno_vozilo_registracija(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.approve_usage_of_licno_vozilo_registracija.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.approve_usage_of_licno_vozilo_registracija(class="form-control form-control-lg") }}
+                {% endif %}
+              </div>
+            </div>
+          </div>
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header" id="headingFour">
+                <h5 class="mb-0">
+                  <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                    - Drugo
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseFour" class="collapse hide" aria-labelledby="headingFour" data-parent="#accordion">
+                <div class="card-body">
+                  {{ form.approve_usage_of_drugo.label(class="form-control-label") }}
+
+                  {% if form.approve_usage_of_drugo.errors %}
+                      {{ form.approve_usage_of_drugo(class="form-control form-control-lg is-invalid") }}
+                      <div class="invalid-feedback">
+                          {% for error in form.approve_usage_of_drugo.errors %}
+                              <span>{{ error }}</span>
+                          {% endfor %}
+                      </div>
+                  {% else %}
+                      {{ form.approve_usage_of_drugo(class="form-control form-control-lg") }}
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+
+
+
+
+    <div class="form-group">
         {{ form.km_start.label(class="form-control-label") }}
 
         {% if form.km_start.errors %}
@@ -195,4 +337,9 @@
             {{ form.km_end(class="form-control form-control-lg") }}
         {% endif %}
     </div>
+    <div class="form-group">
+      {{ form.submit(class="btn btn-outline-info") }}
+    </div>
+
+
 {% endblock content%}
