--- a/putninalozi/templates/vehicle.html
+++ b/putninalozi/templates/vehicle.html
@@ -49,20 +49,24 @@
                     {{ form.vehicle_registration(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
-                {{ form.company_id.label(class="form-control-label") }}
+            {% if current_user.authorization == 's_admin'%}
+              <div class="form-group">
+                  {{ form.company_id.label(class="form-control-label") }}
 
-                {% if form.company_id.errors %}
-                    {{ form.company_id(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.company_id.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.company_id(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
+                  {% if form.company_id.errors %}
+                      {{ form.company_id(class="form-control form-control-lg is-invalid") }}
+                      <div class="invalid-feedback">
+                          {% for error in form.company_id.errors %}
+                              <span>{{ error }}</span>
+                          {% endfor %}
+                      </div>
+                  {% else %}
+                      {{ form.company_id(class="form-control form-control-lg") }}
+                  {% endif %}
+              </div>
+            {% else %}
+              {{ form.company_id(class="sr-only form-control form-control-lg") }}
+            {% endif %}
 
 
         </fieldset>
