--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -28,7 +28,7 @@
     {% for vehicle in vehicles %}
       {% if vehicle.vehicle_company.id == current_user.user_company.id %}
         <tr>
-          <td><a class="mr-2" href="#" title="Edit Vehicle">{{ vehicle.vehicle_type }}</a></td>
+          <td><a class="mr-2" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Edit Vehicle">{{ vehicle.vehicle_type }}</a></td>
           <td>{{ vehicle.vehicle_brand }}</td>
           <td>{{ vehicle.vehicle_registration }}</td>
         </tr>
