--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -168,7 +168,7 @@
         {% endif %}
     </div>
     <div class="form-group">
-        {{ form.approve_usage_of.label(class="form-control-label") }}
+        Odobrava se upotreba:
     </div>
 
     <div id="accordion">
