--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -17,10 +17,10 @@
     <tbody>
       {% for warrant in warrants %}
         <tr>
-          <td> <a class="mr-2" href="#" title="Edit Travel Warrant"> ### </a> </td>
-          <td>###</td>
-          <td>###</td>
-          <td>###</td>
+          <td> <a class="mr-2" href="#" title="Edit Travel Warrant"> {{ warrant.travel_warrant_id }} </a> </td>
+          <td> {{ warrant.travelwarrant_company.companyname }} </td>
+          <td> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} </td>
+          <td> ### </td>
         </tr>
       {% endfor %}
     </tbody>
@@ -34,11 +34,11 @@
     </thead>
     <tbody>
       {% for warrant in warrants %}
-        {% if current_user.user_company.id == warrant.travelwarrants_company.id %}
+        {% if current_user.user_company.id == warrant.travelwarrant_company.id %}
           <tr>
-            <td> <a class="mr-2" href="#" title="Edit Travel Warrant"> ### </a> </td>
-            <td>###</td>
-            <td>###</td>
+            <td> <a class="mr-2" href="#" title="Edit Travel Warrant"> {{ warrant.travel_warrant_id }} </a> </td>
+            <td> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}} </td>
+            <td> ### </td>
           </tr>
         {% endif %}
       {% endfor %}
@@ -53,11 +53,11 @@
     </thead>
     <tbody>
       {% for warrant in warrants %}
-        {% if current_user.id == warrant.travelwarrants_user.id %}
+        {% if current_user.id == warrant.travelwarrant_user.id %}
           <tr>
-            <td> <a class="mr-2" href="#" title="Edit Travel Warrant"> ### </a> </td>
-            <td>###</td>
-            <td>###</td>
+            <td> <a class="mr-2" href="#" title="Edit Travel Warrant"> {{ warrant.travel_warrant_id }} </a> </td>
+            <td> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}} </td>
+            <td> ### </td>
           </tr>
         {% endif %}
       {% endfor %}
