--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -124,13 +124,25 @@
             <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio2">Broj Koleginog Putnog Naloga:</label>
           </div>
+          <div class="form-box">
+            ---dodati kod za funkcionalnos ovog inputa---
+            <input class="form-control form-control-lg" placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo">
+          </div>
           <div class="custom-control custom-radio">
             <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio3">Lično Vozilo:</label>
           </div>
+          <div class="form-box">
+            ---dodati kod za funkcionalnos ovog inputa---
+            <input class="form-control form-control-lg" placeholder="Registracija vozila">
+          </div>
           <div class="custom-control custom-radio">
             <input type="radio" id="customRadio4" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio4">Drugo:</label>
+          </div>
+          <div class="form-box">
+            ---dodati kod za funkcionalnos ovog inputa---
+            <input class="form-control form-control-lg" placeholder="Avion, Autobus, Taxi ...">
           </div>
         </div>
 
