--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -8,7 +8,7 @@
   {% if current_user.authorization == 's_admin' %}
     <thead>
       <tr id="header">
-        <th>Broj Putnog Naloga</th>
+        <th>Br Putnog Naloga</th>
         <th>Company</th>
         <th>Zaposleni</th>
         <th>Dodeljeno Vozilo</th>
@@ -27,7 +27,7 @@
   {% elif current_user.authorization == 'c_admin' %}
     <thead>
       <tr id="header">
-        <th>Broj Putnog Naloga</th>
+        <th>Br Putnog Naloga</th>
         <th>Zaposleni</th>
         <th>Dodeljeno Vozilo</th>
       </tr>
@@ -46,7 +46,7 @@
   {% else %}
     <thead>
       <tr id="header">
-        <th>Broj Putnog Naloga</th>
+        <th>Br Putnog Naloga</th>
         <th>Zaposleni</th>
         <th>Dodeljeno Vozilo</th>
       </tr>
