--- a/putninalozi/templates/register_c.html
+++ b/putninalozi/templates/register_c.html
@@ -159,6 +159,15 @@
                     {{ form.company_phone(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <div class="form-group">
+              {{ form.company_logo.label() }}
+              {{ form.company_logo(class="form-control-file") }}
+              {% if form.company_logo.errors %}
+                {% for error in form.company_logo.errors %}
+                  <span class="text-danger">{{ error }}</span><br></br>
+                {% endfor %}
+              {% endif %}
+            </div>
         </fieldset>
         <div class="form-group">
       {{ form.submit(class="btn btn-outline-info") }}
