--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -1,17 +1,33 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Broj putnog naloga: {{ warrant.travel_warrant_id }}</h1>
-    <hr>
-    <h3>Radnik-ca {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} raspoređen-a na poslove radnog mesta {{ warrant.travelwarrant_user.workplace }} upućuje se na službeni put dana {{warrant.start_datetime}} u {{ warrant.relation }} sa zadatkom: {{ warrant.with_task }}</h3>
-    <br>
-    <h3>Na službenom putu koristi prevozno sredstvo registarske tablice: {{ warrant.travelwarrant_vehicle.vehicle_registration }}</h3>
-    <br>
-    <h3>Dnevnica za ovo služebno putovanje pripada u iznosu od: {{ warrant.daily_wage }} {{ warrant.daily_wage_currency }}</h3>
-    <h3>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podnešće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</h3>
-    <br>
-    <h3>Putni troškovi padaju na teret: {{ warrant.costs_pays }}</h3>
-    <br>
-    <h3>Odobravam isplatu akontacije u iznosu od: {{ warrant.advance_payment }} {{ warrant.advance_payment_currency }}</h3>
+    <div id="accordion">
+    <div class="card">
+      <div class="card-header" id="headingOne">
+        <h5 class="mb-0">
+          <button class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            <h1>Broj putnog naloga: {{ warrant.travel_warrant_id }}</h1>
+          </button>
+        </h5>
+      </div>
+
+      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="card-body">
+          <h3>{{ rod[0] }} {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} {{ rod[1] }} na poslove radnog mesta {{ warrant.travelwarrant_user.workplace }} upućuje se na službeni put dana {{warrant.start_datetime}} u {{ warrant.relation }} sa zadatkom: {{ warrant.with_task }}</h3>
+          <br>
+          <h3>Na službenom putu koristi prevozno sredstvo registarske tablice: {{ warrant.travelwarrant_vehicle.vehicle_registration }}</h3>
+          <br>
+          <h3>Dnevnica za ovo služebno putovanje pripada u iznosu od: {{ warrant.daily_wage }} {{ warrant.daily_wage_currency }}</h3>
+          <h3>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podnešće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</h3>
+          <br>
+          <h3>Putni troškovi padaju na teret: {{ warrant.costs_pays }}</h3>
+          <br>
+          {% if warrant.advance_payment > 0  %}
+            <h3>Odobravam isplatu akontacije u iznosu od: {{ warrant.advance_payment }} {{ warrant.advance_payment_currency }}</h3>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    </div>
     <hr>
     <div class="content-section">
       <form method="POST" action="">
@@ -45,7 +61,90 @@
                   {{ form.end_datetime(class="form-control form-control-lg", type="datetime-local") }}
               {% endif %}
           </div>
-          <div class="custom-control custom-radio">
+          <br>
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                  <button class="btn " data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    {{ form.vehicle_id.label(class="form-control-label") }}
+                  </button>
+                </h5>
+              </div>
+
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                <div class="card-body">
+                  <div class="form-box">
+                    {{ form.vehicle_id.label(class="form-control-label") }}
+                    {{ form.vehicle_id(class="form-control form-control-lg") }}
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h5 class="mb-0">
+                  <button class="btn collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    {{ form.together_with.label(class="form-control-label") }}
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div class="card-body">
+                  <div class="form-box">
+                    {{ form.together_with.label(class="form-control-label") }}
+                    {{ form.together_with(class="form-control form-control-lg", placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo") }}
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h5 class="mb-0">
+                  <button class="btn collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Lično Vozilo:
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                <div class="card-body">
+                  <div class="form-box">
+                    {{ form.personal_type.label(class="form-control-label") }}
+                    {{ form.personal_type(class="form-control form-control-lg", placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo") }}
+                  </div>
+                  <div class="form-box">
+                    {{ form.personal_brand.label(class="form-control-label") }}
+                    {{ form.personal_brand(class="form-control form-control-lg", placeholder="Uneti brend ličnog vozila") }}
+                  </div>
+                  <div class="form-box">
+                    {{ form.personal_registration.label(class="form-control-label") }}
+                    {{ form.personal_registration(class="form-control form-control-lg", placeholder="Uneti registraciju ličnog vozila") }}
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingFour">
+                <h5 class="mb-0">
+                  <button class="btn collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    {{ form.other.label(class="form-control-label") }}
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                <div class="card-body">
+                  <div class="form-box">
+                    {{ form.other.label(class="form-control-label") }}
+                    {{ form.other(class="form-control form-control-lg", placeholder="Avion, Autobus, Taxi ...") }}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <!-- <div class="custom-control custom-radio">
             <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio1">Službeno Vozilo:</label>
           </div>
@@ -147,7 +246,7 @@
               {% else %}
                   {{ form.other(class="form-control form-control-lg", placeholder="Avion, Autobus, Taxi ...") }}
               {% endif %}
-          </div>
+          </div> -->
           <br>
           <br>
           <div class="form-box">
@@ -178,6 +277,7 @@
                   {{ form.km_end(class="form-control form-control-lg", placeholder="Avion, Autobus, Taxi ...") }}
               {% endif %}
           </div>
+          <br>
       </fieldset>
 
   </form>
